[gd_scene load_steps=5 format=2]

[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 18.271
margin_top = 11.177
margin_right = 151.271
margin_bottom = 40.177
custom_fonts/font = SubResource( 1 )
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 755.0
margin_top = 37.0
margin_right = 975.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 511.0
margin_top = 37.0
margin_right = 711.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Force"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="HSlider" parent="."]
margin_left = 753.867
margin_top = 22.3921
margin_right = 976.867
margin_bottom = 38.3921
min_value = 50.0
max_value = 800.0
step = 10.0
value = 500.0
tick_count = 80
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="force" type="HSlider" parent="."]
margin_left = 502.478
margin_top = 22.2246
margin_right = 712.478
margin_bottom = 38.2246
min_value = 1.0
max_value = 50.0
step = 1.0
value = 15.0
tick_count = 50
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_exited" from="speed" to="." method="_on_speed_mouse_exited"]
[connection signal="value_changed" from="speed" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="force" to="." method="_on_force_value_changed"]
